<resources>
    <string name="app_name">People Counter</string>
    <string name="total_text_default">Total: 0</string>
    <string name="current_text_default">0 people</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="reset">RESET</string>
    <string name="total_people">Total: %d</string>
    <string name="current_people">%d people</string>
</resources>
